# lgc-rct

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-freeze.txt
data/: FORMAT.md
demos/: 02_demo_deap.py
experiments/: lgc_ablation_deap.py  lgc_rct_loso.py
lgcrct/: __init__.py  evaluation.py  lgc.py  pipeline.py  smoothing.py
results/: LGC-RCT_K10_DEAP_AROUSAL_15-36Hz_LOSO.csv  LGC-RCT_K10_DEAP_VALENCE_15-36Hz_LOSO.csv  loso_34pilots_published.csv
